Source/WebKit2/UIProcess/ios/WKPDFView.mm
@@ -40,6 +40,7 @@
 #import "_WKFindDelegate.h"
 #import <MobileCoreServices/UTCoreTypes.h>
 #import <WebCore/FloatRect.h>
+#import <WebCore/LocalizedStrings.h>
 #import <wtf/RetainPtr.h>
 #import <wtf/Vector.h>
 
@@ -48,6 +49,8 @@ using namespace WebCore;
 const CGFloat pdfPageMargin = 8;
 const CGFloat pdfMinimumZoomScale = 1;
 const CGFloat pdfMaximumZoomScale = 5;
+
+const CGFloat passwordEntryFieldPadding = 10;
 
 const float overdrawHeightMultiplier = 1.5;
 
@@ -65,9 +68,12 @@ typedef struct {
 @end
 
 @implementation WKPDFView {
+    RetainPtr<CGPDFDocumentRef> _cgPDFDocument;
     RetainPtr<UIPDFDocument> _pdfDocument;
     RetainPtr<NSString> _suggestedFilename;
     RetainPtr<WKPDFPageNumberIndicator> _pageNumberIndicator;
+
+    RetainPtr<UIDocumentPasswordView> _passwordView;
 
     Vector<PDFPageInfo> _pages;
     unsigned _centerPageNumber;
@@ -125,6 +131,8 @@ typedef struct {
 
 - (void)dealloc
 {
+    [[NSNotificationCenter defaultCenter] removeObserver:self];
+
     [self _clearPages];
     [_pageNumberIndicator removeFromSuperview];
     dispatch_release(_findQueue);
@@ -152,6 +160,17 @@ typedef struct {
     _pages.clear();
 }
 
+- (void)_didLoadPDFDocument
+{
+    _pdfDocument = adoptNS([[UIPDFDocument alloc] initWithCGPDFDocument:_cgPDFDocument.get()]);
+
+    // FIXME: Restore the scroll position and page scale if navigating from the back/forward list.
+
+    [self _computePageAndDocumentFrames];
+    [self _revalidateViews];
+    [self _scrollToFragment:_webView.URL.fragment];
+}
+
 - (void)web_setContentProviderData:(NSData *)data suggestedFilename:(NSString *)filename
 {
     _suggestedFilename = adoptNS([filename copy]);
@@ -159,18 +178,26 @@ typedef struct {
     [self _clearPages];
 
     RetainPtr<CGDataProviderRef> dataProvider = adoptCF(CGDataProviderCreateWithCFData((CFDataRef)data));
-    RetainPtr<CGPDFDocumentRef> cgPDFDocument = adoptCF(CGPDFDocumentCreateWithProvider(dataProvider.get()));
-    _pdfDocument = adoptNS([[UIPDFDocument alloc] initWithCGPDFDocument:cgPDFDocument.get()]);
+    _cgPDFDocument = adoptCF(CGPDFDocumentCreateWithProvider(dataProvider.get()));
 
-    // FIXME: restore the scroll position and page scale if navigating from the back/forward list.
+    if (!_cgPDFDocument)
+        return;
 
-    [self _computePageAndDocumentFrames];
-    [self _revalidateViews];
-    [self _scrollToFragment:_webView.URL.fragment];
+    if (CGPDFDocumentIsUnlocked(_cgPDFDocument.get())) {
+        [self _didLoadPDFDocument];
+        return;
+    }
+
+    [self _showPasswordEntryField];
 }
 
 - (void)web_setMinimumSize:(CGSize)size
 {
+    if (_passwordView) {
+        [self _updatePasswordEntryField];
+        return;
+    }
+
     _minimumSize = size;
 
     CGFloat oldDocumentLeftFraction = 0;
@@ -328,6 +355,9 @@ typedef struct {
 
 - (void)_computePageAndDocumentFrames
 {
+    if (_passwordView)
+        return;
+
     NSUInteger pageCount = [_pdfDocument numberOfPages];
     [_pageNumberIndicator setPageCount:pageCount];
     
@@ -691,6 +721,110 @@ static NSStringCompareOptions stringCompareOptions(_WKFindOptions options)
 - (RetainPtr<NSArray>)actionSheetAssistant:(WKActionSheetAssistant *)assistant decideActionsForElement:(_WKActivatedElementInfo *)element defaultActions:(RetainPtr<NSArray>)defaultActions
 {
     return _webView->_page->uiClient().actionsForElement(element, WTF::move(defaultActions));
+}
+
+#pragma mark Password protection UI
+
+- (void)_updatePasswordEntryField
+{
+    [_passwordView setFrame:CGRectMake(0, 0, _webView.bounds.size.width, _webView.bounds.size.height)];
+    [_scrollView setContentSize:[_passwordView bounds].size];
+}
+
+- (void)_keyboardDidShow:(NSNotification *)notification
+{
+    UITextField *passwordField = [_passwordView passwordField];
+    if (!passwordField.isEditing)
+        return;
+
+    CGRect keyboardRect = [UIPeripheralHost visiblePeripheralFrame];
+    if (CGRectIsEmpty(keyboardRect))
+        return;
+
+    UIWindow *window = _scrollView.window;
+    keyboardRect = [window convertRect:keyboardRect fromWindow:nil];
+    keyboardRect = [_scrollView convertRect:keyboardRect fromView:window];
+
+    CGRect passwordFieldFrame = [passwordField convertRect:passwordField.bounds toView:_scrollView];
+
+    CGSize contentSize = [_passwordView bounds].size;
+    contentSize.height += CGRectGetHeight(keyboardRect);
+    [_scrollView setContentSize:contentSize];
+
+    if (CGRectIntersectsRect(passwordFieldFrame, keyboardRect)) {
+        CGFloat yDelta = CGRectGetMaxY(passwordFieldFrame) - CGRectGetMinY(keyboardRect);
+
+        CGPoint contentOffset = _scrollView.contentOffset;
+        contentOffset.y += yDelta + passwordEntryFieldPadding;
+
+        [_scrollView setContentOffset:contentOffset animated:YES];
+    }
+}
+
+- (void)_showPasswordEntryField
+{
+    [_scrollView setMinimumZoomScale:1];
+    [_scrollView setMaximumZoomScale:1];
+    [_scrollView setBackgroundColor:[UIColor groupTableViewBackgroundColor]];
+
+    _passwordView = adoptNS([[UIDocumentPasswordView alloc] initWithDocumentName:_suggestedFilename.get()]);
+    [_passwordView setPasswordDelegate:self];
+
+    [self _updatePasswordEntryField];
+
+    [self addSubview:_passwordView.get()];
+}
+
+- (void)_hidePasswordEntryField
+{
+    [_passwordView removeFromSuperview];
+    _passwordView = nil;
+
+    [_scrollView setMinimumZoomScale:pdfMinimumZoomScale];
+    [_scrollView setMaximumZoomScale:pdfMaximumZoomScale];
+    [_scrollView setBackgroundColor:[UIColor grayColor]];
+}
+
+- (void)userDidEnterPassword:(NSString *)password forPasswordView:(UIDocumentPasswordView *)passwordView
+{
+    [self _tryToUnlockWithPassword:password];
+}
+
+- (void)didBeginEditingPassword:(UITextField *)passwordField inView:(UIDocumentPasswordView *)passwordView
+{
+    [[NSNotificationCenter defaultCenter] addObserver:self selector:@selector(_keyboardDidShow:) name:UIKeyboardDidShowNotification object:nil];
+}
+
+- (void)didEndEditingPassword:(UITextField *)passwordField inView:(UIDocumentPasswordView *)passwordView
+{
+    [_scrollView setContentSize:[_passwordView frame].size];
+    [_scrollView setContentOffset:CGPointMake(-_scrollView.contentInset.left, -_scrollView.contentInset.top) animated:YES];
+
+    [[NSNotificationCenter defaultCenter] removeObserver:self name:UIKeyboardDidShowNotification object:nil];
+}
+
+- (void)_didFailToUnlock
+{
+    [[_passwordView passwordField] setText:@""];
+    UIAlertController* alert = [UIAlertController alertControllerWithTitle:WEB_UI_STRING("The document could not be opened with that password.", "PDF password failure alert message") message:@"" preferredStyle:UIAlertControllerStyleAlert];
+
+    UIAlertAction* defaultAction = [UIAlertAction actionWithTitle:WEB_UI_STRING_KEY("OK", "OK (PDF password failure alert)", "OK button label in PDF password failure alert") style:UIAlertActionStyleDefault handler:[](UIAlertAction *) { }];
+    
+    [alert addAction:defaultAction];
+
+    [self.window.rootViewController presentViewController:alert animated:YES completion:nil];
+}
+
+- (BOOL)_tryToUnlockWithPassword:(NSString *)password
+{
+    if (CGPDFDocumentUnlockWithPassword(_cgPDFDocument.get(), [password UTF8String])) {
+        [self _hidePasswordEntryField];
+        [self _didLoadPDFDocument];
+        return YES;
+    }
+
+    [self _didFailToUnlock];
+    return NO;
 }
 
 @end
